--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,15 +25,21 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install pytest  # Ensure pytest is installed
+
+      - name: Verify Installed Packages
+        run: pip list  # Check installed packages
 
       - name: Run Tests
-        run: |
-          pytest  # If using pytest for testing
+        run: pytest  # Run tests
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3  # Ensures deployment gets the latest code
+
       - name: Deploy Application
         run: echo "Deployment process goes here"
