--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,13 +25,19 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install pytest  # Ensure pytest is installed
+          pip install pytest
 
       - name: Verify Installed Packages
-        run: pip list  # Check installed packages
+        run: pip list
 
       - name: Run Tests
-        run: pytest  # Run tests
+        run: |
+          pytest tests/ || code=$?
+          if [[ $code -eq 5 ]]; then
+            echo "⚠️ No tests were found, but continuing..."
+          else
+            exit $code
+          fi
 
   deploy:
     needs: build
@@ -39,7 +45,7 @@ jobs:
 
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v3  # Ensures deployment gets the latest code
+        uses: actions/checkout@v3
 
       - name: Deploy Application
-        run: echo "Deployment process goes here"
+        run: echo "🚀 Deployment process goes here"
