--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "directories": {
     "test": "tests"
   },
-  "scripts": {
-    "test": "echo \"No tests yet\" && exit 0",
-    "prepare": "husky",
-    "docs:update": "node updateDocs.js",
-    "release": "standard-version"
-  },
+ "scripts": {
+  "test": "echo \"No tests yet\" && exit 0",
+  "test:unit": "echo \"✅ Unit tests placeholder\" && exit 0",
+  "test:integration": "echo \"✅ Integration tests placeholder\" && exit 0",
+  "test:e2e": "echo \"✅ E2E tests placeholder\" && exit 0",
+  "prepare": "husky",
+  "docs:update": "node updateDocs.js",
+  "release": "standard-version"
+},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/geeth20001223/Geeth-_AI_Desktop-_Assistant.git"
