--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,22 +10,15 @@ jobs:
   python-build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v3
-
-      - name: Set Up Python
-        uses: actions/setup-python@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v3
         with:
           python-version: "3.10"
-
-      - name: Install Dependencies
-        run: |
+      - run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install pytest
-
-      - name: Run Python Tests
-        run: pytest
+      - run: pytest
 
   node-unit-tests:
     runs-on: ubuntu-latest
@@ -46,7 +39,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 18.x
+          node-version: '20.x'
       - run: npm ci
       - run: npm run test:integration
 
@@ -56,14 +49,17 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: 18.x
+          node-version: '20.x'
       - run: npm ci
       - run: npm run test:e2e
 
   deploy:
-    needs: [python-build, node-unit-tests, node-integration-tests, node-e2e-tests]
     runs-on: ubuntu-latest
+    needs:
+      - python-build
+      - node-unit-tests
+      - node-integration-tests
+      - node-e2e-tests
     steps:
       - uses: actions/checkout@v3
-      - name: Deploy Application
-        run: echo "Deployment process goes here"
+      - run: echo "✅ Deployment step here"
