--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -82,6 +82,32 @@ jobs:
       - run: npm ci
       - run: npm run test:e2e
 
+  security-scan:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+      - name: Set up CodeQL
+        uses: github/codeql-action/setup@v3
+      - name: Initialize CodeQL analysis
+        run: |
+          mkdir -p .github/workflows/codeql
+          codeql database create --language=python,cpp .
+      - name: Run CodeQL analysis
+        uses: github/codeql-action/analyze@v3
+      - name: Run DAST (OWASP ZAP)
+        run: |
+          echo "Running DAST scan"
+          # Replace the URL with your app's URL (e.g., staging or test)
+          zap-cli quick-scan --url http://your-app-url
+          # Capture and check for high vulnerabilities in the result file
+          if grep -q "High" results.xml; then
+            echo "High vulnerabilities found in DAST scan!"
+            exit 1  # Fail the build if high vulnerabilities are found
+          fi
+      - name: Run SCA (Snyk)
+        run: snyk test --all-projects --fail-on-vulns
+
   deploy:
     runs-on: ubuntu-latest
     needs:
@@ -89,6 +115,7 @@ jobs:
       - node-unit-tests
       - node-integration-tests
       - node-e2e-tests
+      - security-scan
     steps:
       - uses: actions/checkout@v3
       - run: echo "✅ Deployment step here"
