--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -117,8 +117,8 @@ jobs:
           snyk auth "${SNYK_TOKEN}" || echo "⚠️ Snyk auth failed (check token or permissions)."
           snyk test --all-projects || echo "✅ Snyk scan complete. Vulnerabilities found (ignored in CI)."
 
-  deploy-prod:
-    if: github.ref == 'refs/heads/main'
+    deploy-prod:
+    if: github.event_name == 'push' && github.ref_name == 'main'
     runs-on: ubuntu-latest
     needs:
       - python-build
@@ -132,7 +132,7 @@ jobs:
         run: echo "🚀 Deploying to Production environment..."
 
   deploy-staging:
-    if: github.ref == 'refs/heads/staging'
+    if: github.event_name == 'push' && github.ref_name == 'staging'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -140,9 +140,12 @@ jobs:
         run: echo "🚀 Deploying to Staging environment..."
 
   deploy-dev:
-    if: github.ref == 'refs/heads/dev'
+    if: github.event_name == 'push' && github.ref_name == 'dev'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Deploy to Development
+        run: echo "🚀 Deploying to Development environment..."
+
       - name: Deploy to Development
         run: echo "🚀 Deploying to Development environment..."
