--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -107,17 +107,17 @@ jobs:
           echo "<results><vuln>Low</vuln></results>" > results.xml
           echo "OWASP ZAP scan completed ✅"
 
-      # --- Snyk Auth & Test (with secret token) ---
-      - name: Run Snyk Security Scan
+      # --- Snyk Safe Mode ---
+      - name: Run Snyk (Safe Token Mode)
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         run: |
-          echo "🔒 Running Snyk scan..."
+          echo "🔒 Starting Snyk scan..."
           npm install -g snyk
-          snyk auth "${SNYK_TOKEN}" || echo "⚠️ Snyk auth failed (check token or permissions)."
-          snyk test --all-projects || echo "✅ Snyk scan complete. Vulnerabilities found (ignored in CI)."
+          snyk auth "${SNYK_TOKEN}" || echo "⚠️ Snyk auth failed or skipped."
+          snyk test --all-projects || echo "✅ Snyk scan complete. Vulnerabilities may exist (not breaking build)."
 
-    deploy-prod:
+  deploy-prod:
     if: github.event_name == 'push' && github.ref_name == 'main'
     runs-on: ubuntu-latest
     needs:
@@ -144,8 +144,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Deploy to Development
-        run: echo "🚀 Deploying to Development environment..."
-
       - name: Deploy to Development
         run: echo "🚀 Deploying to Development environment..."
