--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -88,7 +88,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # --- CodeQL Scan ---
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v2
         with:
@@ -100,14 +99,12 @@ jobs:
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
 
-      # --- OWASP ZAP Simulation ---
       - name: Run DAST (Simulated OWASP ZAP)
         run: |
           echo "Running OWASP ZAP simulation..."
           echo "<results><vuln>Low</vuln></results>" > results.xml
           echo "OWASP ZAP scan completed ✅"
 
-      # --- Snyk Safe Mode ---
       - name: Run Snyk (Safe Token Mode)
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
@@ -134,6 +131,12 @@ jobs:
   deploy-staging:
     if: github.event_name == 'push' && github.ref_name == 'staging'
     runs-on: ubuntu-latest
+    needs:
+      - python-build
+      - node-unit-tests
+      - node-integration-tests
+      - node-e2e-tests
+      - security-scan
     steps:
       - uses: actions/checkout@v3
       - name: Deploy to Staging
@@ -142,6 +145,12 @@ jobs:
   deploy-dev:
     if: github.event_name == 'push' && github.ref_name == 'dev'
     runs-on: ubuntu-latest
+    needs:
+      - python-build
+      - node-unit-tests
+      - node-integration-tests
+      - node-e2e-tests
+      - security-scan
     steps:
       - uses: actions/checkout@v3
       - name: Deploy to Development
