--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -99,7 +99,6 @@ jobs:
       - name: Run DAST (OWASP ZAP)
         run: |
           echo "Running DAST scan..."
-          # Example only: Replace with actual ZAP commands if used in real deployment
           echo "<results><vuln>Low</vuln></results>" > results.xml
           if grep -q "High" results.xml; then
             echo "High vulnerabilities found!"
@@ -107,13 +106,15 @@ jobs:
           fi
 
       - name: Run SCA (Snyk)
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         run: |
           npm install -g snyk
-          snyk auth ${{ secrets.SNYK_TOKEN }}
+          snyk auth $SNYK_TOKEN
           snyk test --all-projects --fail-on=all
 
   deploy-prod:
-    if: github.ref == 'refs/heads/main'
+    if: github.ref_name == 'main'
     runs-on: ubuntu-latest
     needs:
       - python-build
@@ -127,16 +128,28 @@ jobs:
         run: echo "🚀 Deploying to Production environment..."
 
   deploy-staging:
-    if: github.ref == 'refs/heads/staging'
+    if: github.ref_name == 'staging'
     runs-on: ubuntu-latest
+    needs:
+      - python-build
+      - node-unit-tests
+      - node-integration-tests
+      - node-e2e-tests
+      - security-scan
     steps:
       - uses: actions/checkout@v3
       - name: Deploy to Staging
         run: echo "🚀 Deploying to Staging environment..."
 
   deploy-dev:
-    if: github.ref == 'refs/heads/dev'
+    if: github.ref_name == 'dev'
     runs-on: ubuntu-latest
+    needs:
+      - python-build
+      - node-unit-tests
+      - node-integration-tests
+      - node-e2e-tests
+      - security-scan
     steps:
       - uses: actions/checkout@v3
       - name: Deploy to Development
