--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -113,8 +113,7 @@ jobs:
           snyk auth $SNYK_TOKEN
           snyk test --all-projects --fail-on=all
 
-  deploy-dev:
-    if: github.ref_name == 'dev'
+  deploy:
     runs-on: ubuntu-latest
     needs:
       - python-build
@@ -122,53 +121,36 @@ jobs:
       - node-integration-tests
       - node-e2e-tests
       - security-scan
+    if: github.ref_name == 'dev' || github.ref_name == 'staging' || github.ref_name == 'main'
     steps:
       - uses: actions/checkout@v3
-      - name: Deploy to Development
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-        run: |
-          echo "$SSH_PRIVATE_KEY" > key.pem
-          chmod 600 key.pem
-          ssh -o StrictHostKeyChecking=no -i key.pem azureuser@20.195.40.50 \
-          'cd /home/azureuser/Geeth-_AI_Desktop-_Assistant && git pull origin dev && systemctl restart geeth-assistant.service'
 
-  deploy-staging:
-    if: github.ref_name == 'staging'
-    runs-on: ubuntu-latest
-    needs:
-      - python-build
-      - node-unit-tests
-      - node-integration-tests
-      - node-e2e-tests
-      - security-scan
-    steps:
-      - uses: actions/checkout@v3
-      - name: Deploy to Staging
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+      - name: Setup SSH Key
         run: |
-          echo "$SSH_PRIVATE_KEY" > key.pem
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > key.pem
           chmod 600 key.pem
-          ssh -i key.pem -o StrictHostKeyChecking=no azureuser@STAGING_SERVER_IP << 'EOF'
-          cd /home/azureuser/Geeth-_AI_Desktop-_Assistant git pull origin staging systemctl restart geeth-assistant.service EOF
 
-  deploy-prod:
-    if: github.ref_name == 'main'
-    runs-on: ubuntu-latest
-    needs:
-      - python-build
-      - node-unit-tests
-      - node-integration-tests
-      - node-e2e-tests
-      - security-scan
-    steps:
-      - uses: actions/checkout@v3
-      - name: Deploy to Production
+      - name: Deploy to Server
         env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          BRANCH_NAME: ${{ github.ref_name }}
         run: |
-          echo "$SSH_PRIVATE_KEY" > key.pem
-          chmod 600 key.pem
-          ssh -o StrictHostKeyChecking=no -i key.pem azureuser@PROD_SERVER_IP \
-            'cd /home/azureuser/Geeth-_AI_Desktop-_Assistant && git pull origin main && systemctl restart geeth-assistant.service'
+          echo "📦 Deploying from branch: $BRANCH_NAME"
+
+          if [ "$BRANCH_NAME" = "dev" ]; then
+            echo "🚀 Deploying to DEV server..."
+            ssh -o StrictHostKeyChecking=no -i key.pem azureuser@20.195.40.50 \
+              'cd /home/azureuser/Geeth-_AI_Desktop-_Assistant && git pull origin dev && systemctl restart geeth-assistant.service'
+
+          elif [ "$BRANCH_NAME" = "staging" ]; then
+            echo "🚀 Deploying to STAGING server..."
+            ssh -o StrictHostKeyChecking=no -i key.pem azureuser@${{ secrets.STAGING_SERVER_IP }} << 'EOF'
+            cd /home/azureuser/Geeth-_AI_Desktop-_Assistant git pull origin staging systemctl restart geeth-assistant.service EOF
+
+          elif [ "$BRANCH_NAME" = "main" ]; then
+            echo "🚀 Deploying to PRODUCTION server..."
+            ssh -o StrictHostKeyChecking=no -i key.pem azureuser@${{ secrets.PROD_SERVER_IP }} \
+              'cd /home/azureuser/Geeth-_AI_Desktop-_Assistant && git pull origin main && systemctl restart geeth-assistant.service'
+
+          else
+            echo "❌ Unknown branch: $BRANCH_NAME"
+            exit 1
