--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,10 @@ on:
       - staging
       - main
 
+permissions:
+  contents: read
+  security-events: write
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -48,17 +52,38 @@ jobs:
 
           elif [ "$BRANCH_NAME" = "staging" ]; then
             echo "🚀 Deploying to STAGING server..."
-            ssh -o StrictHostKeyChecking=no -i key.pem azureuser@STAGING_SERVER_IP << 'EOF'
-cd /home/azureuser/Geeth-_AI_Desktop-_Assistant
-git pull origin staging
-systemctl restart geeth-assistant.service
-EOF
+            ssh -o StrictHostKeyChecking=no -i key.pem azureuser@20.195.40.50 \
+              'cd /home/azureuser/Geeth-_AI_Desktop-_Assistant && git pull origin staging && systemctl restart geeth-assistant.service'
 
           elif [ "$BRANCH_NAME" = "main" ]; then
             echo "🚀 Deploying to PRODUCTION server..."
-            ssh -o StrictHostKeyChecking=no -i key.pem azureuser@PROD_SERVER_IP \
+            ssh -o StrictHostKeyChecking=no -i key.pem azureuser@20.195.40.50 \
               'cd /home/azureuser/Geeth-_AI_Desktop-_Assistant && git pull origin main && systemctl restart geeth-assistant.service'
 
           else
             echo "❌ Unknown branch: $BRANCH_NAME"
             exit 1
+
+  security-scan:
+    runs-on: ubuntu-latest
+    needs: deploy
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v2
+        with:
+          languages: python, javascript
+
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v2
+
+      - name: Run Snyk SCA
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        run: |
+          npm install -g snyk
+          snyk auth $SNYK_TOKEN
+          snyk test --all-projects --fail-on=all
