--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,38 +7,29 @@ on:
       - staging
       - main
 
-permissions:
-  contents: read
-  security-events: write
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout Code
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      # Step 2: Setup Python
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
-      # Step 3: Install Dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # Step 4: Setup SSH Private Key
       - name: Setup SSH Private Key
         run: |
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > key.pem
           chmod 600 key.pem
 
-      # Step 5: Deploy to Correct Environment
       - name: Deploy to Environment
         env:
           BRANCH_NAME: ${{ github.ref_name }}
@@ -52,8 +43,11 @@ jobs:
 
           elif [ "$BRANCH_NAME" = "staging" ]; then
             echo "🚀 Deploying to STAGING server..."
-            ssh -o StrictHostKeyChecking=no -i key.pem azureuser@20.195.40.50 \
-              'cd /home/azureuser/Geeth-_AI_Desktop-_Assistant && git pull origin staging && systemctl restart geeth-assistant.service'
+            ssh -o StrictHostKeyChecking=no -i key.pem azureuser@20.195.40.50 << EOF
+              cd /home/azureuser/Geeth-_AI_Desktop-_Assistant
+              git pull origin staging
+              systemctl restart geeth-assistant.service
+EOF
 
           elif [ "$BRANCH_NAME" = "main" ]; then
             echo "🚀 Deploying to PRODUCTION server..."
@@ -63,27 +57,3 @@ jobs:
           else
             echo "❌ Unknown branch: $BRANCH_NAME"
             exit 1
-
-  security-scan:
-    runs-on: ubuntu-latest
-    needs: deploy
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Initialize CodeQL
-        uses: github/codeql-action/init@v2
-        with:
-          languages: python, javascript
-
-      - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v2
-
-      - name: Run Snyk SCA
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-        run: |
-          npm install -g snyk
-          snyk auth $SNYK_TOKEN
-          snyk test --all-projects --fail-on=all
