--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,24 +12,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout Code
       - name: Checkout Code
         uses: actions/checkout@v3
 
+      # Step 2: Setup Python
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
+      # Step 3: Install Dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      # Step 4: Setup SSH Private Key
       - name: Setup SSH Private Key
         run: |
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > key.pem
           chmod 600 key.pem
 
+      # Step 5: Deploy to Correct Environment
       - name: Deploy to Environment
         env:
           BRANCH_NAME: ${{ github.ref_name }}
@@ -43,11 +48,8 @@ jobs:
 
           elif [ "$BRANCH_NAME" = "staging" ]; then
             echo "🚀 Deploying to STAGING server..."
-            ssh -o StrictHostKeyChecking=no -i key.pem azureuser@20.195.40.50 << EOF
-              cd /home/azureuser/Geeth-_AI_Desktop-_Assistant
-              git pull origin staging
-              systemctl restart geeth-assistant.service
-EOF
+            ssh -o StrictHostKeyChecking=no -i key.pem azureuser@20.195.40.50 \
+              'cd /home/azureuser/Geeth-_AI_Desktop-_Assistant && git pull origin staging && systemctl restart geeth-assistant.service'
 
           elif [ "$BRANCH_NAME" = "main" ]; then
             echo "🚀 Deploying to PRODUCTION server..."
