--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,30 +12,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout Code
       - name: Checkout Code
         uses: actions/checkout@v3
 
-      # Step 2: Setup Python
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
-      # Step 3: Install Dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      # Step 4: Setup SSH Private Key
       - name: Setup SSH Private Key
         run: |
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > key.pem
           chmod 600 key.pem
 
-      # Step 5: Deploy to Correct Environment
-      - name: Deploy to Environment
+      - name: Deploy to Correct Environment
         env:
           BRANCH_NAME: ${{ github.ref_name }}
         run: |
@@ -44,17 +39,17 @@ jobs:
           if [ "$BRANCH_NAME" = "dev" ]; then
             echo "🚀 Deploying to DEV server..."
             ssh -o StrictHostKeyChecking=no -i key.pem azureuser@20.195.40.50 \
-              'cd /home/azureuser/Geeth-_AI_Desktop-_Assistant && git pull origin dev && systemctl restart geeth-assistant.service'
+              'cd /home/azureuser/Geeth-_AI_Desktop-_Assistant && git pull origin dev && sudo systemctl restart geeth-assistant.service'
 
           elif [ "$BRANCH_NAME" = "staging" ]; then
             echo "🚀 Deploying to STAGING server..."
             ssh -o StrictHostKeyChecking=no -i key.pem azureuser@20.195.40.50 \
-              'cd /home/azureuser/Geeth-_AI_Desktop-_Assistant && git pull origin staging && systemctl restart geeth-assistant.service'
+              'cd /home/azureuser/Geeth-_AI_Desktop-_Assistant && git pull origin staging && sudo systemctl restart geeth-assistant.service'
 
           elif [ "$BRANCH_NAME" = "main" ]; then
             echo "🚀 Deploying to PRODUCTION server..."
             ssh -o StrictHostKeyChecking=no -i key.pem azureuser@20.195.40.50 \
-              'cd /home/azureuser/Geeth-_AI_Desktop-_Assistant && git pull origin main && systemctl restart geeth-assistant.service'
+              'cd /home/azureuser/Geeth-_AI_Desktop-_Assistant && git pull origin main && sudo systemctl restart geeth-assistant.service'
 
           else
             echo "❌ Unknown branch: $BRANCH_NAME"
