--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,7 +45,6 @@ jobs:
 
       - name: Install dependencies
         run: |
-          HEAD
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
@@ -54,7 +53,7 @@ jobs:
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > key.pem
           chmod 600 key.pem
 
-      - name: Deploy to environment
+      - name: Deploy to Environment
         env:
           BRANCH_NAME: ${{ github.ref_name }}
         run: |
@@ -63,24 +62,28 @@ jobs:
           if [ "$BRANCH_NAME" = "dev" ]; then
             echo "🚀 Deploying to DEV server..."
             ssh -o StrictHostKeyChecking=no -i key.pem azureuser@20.195.40.50 \
-              'cd /home/azureuser/Geeth-_AI_Desktop-_Assistant && git pull origin dev && systemctl restart geeth-assistant.service'
+              'cd /home/azureuser/Geeth-_AI_Desktop-_Assistant && git pull origin dev && sudo systemctl restart geeth-assistant.service'
 
           elif [ "$BRANCH_NAME" = "staging" ]; then
             echo "🚀 Deploying to STAGING server..."
-            ssh -o StrictHostKeyChecking=no -i key.pem azureuser@20.195.40.50 << 'EOF'
-            cd /home/azureuser/Geeth-_AI_Desktop-_Assistant git pull origin staging systemctl restart geeth-assistant.service EOF
+            ssh -o StrictHostKeyChecking=no -i key.pem azureuser@20.195.40.50 \
+              'cd /home/azureuser/Geeth-_AI_Desktop-_Assistant && git pull origin staging && sudo systemctl restart geeth-assistant.service'
 
           elif [ "$BRANCH_NAME" = "main" ]; then
             echo "🚀 Deploying to PRODUCTION server..."
             ssh -o StrictHostKeyChecking=no -i key.pem azureuser@20.195.40.50 \
-              'cd /home/azureuser/Geeth-_AI_Desktop-_Assistant && git pull origin main && systemctl restart geeth-assistant.service'
+              'cd /home/azureuser/Geeth-_AI_Desktop-_Assistant && git pull origin main && sudo systemctl restart geeth-assistant.service'
 
           else
             echo "❌ Unknown branch: $BRANCH_NAME"
+            exit 1
 
+      - name: Run DAST Scan
+        run: |
           echo "Running DAST scan..."
           echo "<results><vuln>Low</vuln></results>" > results.xml
           if grep -q "High" results.xml; then
-            echo "High vulnerabilities found!"
-          50ecf52 (Updated CI/CD pipeline, deploy script, tracing, and alert rules)
+            echo "❌ High vulnerabilities found!"
             exit 1
+          else
+            echo "✅ No high vulnerabilities."
